--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "bcrypt": "^1.0.3",
     "domready": "^1.0.8",
     "font-awesome": "^4.7.0",
+    "google-map-react": "^0.25.0",
     "mantra-core": "^1.7.0",
+    "prop-types": "^15.6.0",
     "react": "^0.14.9",
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-datetimepicker": "0.0.22",
